packages/beff-core/tests/snapshots/print_parser__tests__ok_recursive_generic.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_cgen(r#\"\n\n            type GenericWrapper<T> = {\n              value: T;\n              value2: T | boolean;\n              other: GenericWrapper<T>;\n            };\n\n            type UsesGenericWrapper = {\n              wrappedString: GenericWrapper<string>;\n              wrappedNumber: GenericWrapper<number>;\n            };\n\n            parse.buildParsers<{ UsesGenericWrapper: UsesGenericWrapper }>();\n      \"#)"
---
--- entry.ts ---
type GenericWrapper<T> = {
  value: T;
  value2: T | boolean;
  other: GenericWrapper<T>;
};

type UsesGenericWrapper = {
  wrappedString: GenericWrapper<string>;
  wrappedNumber: GenericWrapper<number>;
};

parse.buildParsers<{ UsesGenericWrapper: UsesGenericWrapper }>();
--------------------------------
const direct_hoist_0 = new RefRuntype("GenericWrapper_type_application_instance_0");
const direct_hoist_1 = new TypeofRuntype("string");
const direct_hoist_2 = new TypeofRuntype("boolean");
const direct_hoist_3 = new RefRuntype("GenericWrapper_type_application_instance_1");
const direct_hoist_4 = new TypeofRuntype("number");
const namedRuntypes = {
    "GenericWrapper_type_application_instance_0": new ObjectRuntype({
        "other": direct_hoist_0,
        "value": direct_hoist_1,
        "value2": new AnyOfRuntype([
            direct_hoist_2,
            direct_hoist_1
        ])
    }, []),
    "GenericWrapper_type_application_instance_1": new ObjectRuntype({
        "other": direct_hoist_3,
        "value": direct_hoist_4,
        "value2": new AnyOfRuntype([
            direct_hoist_2,
            direct_hoist_4
        ])
    }, []),
    "UsesGenericWrapper": new ObjectRuntype({
        "wrappedNumber": direct_hoist_3,
        "wrappedString": direct_hoist_0
    }, [])
};
const buildParsersInput = {
    "UsesGenericWrapper": new RefRuntype("UsesGenericWrapper")
};
