packages/beff-core/tests/snapshots/print_parser__tests__ok_recursive_generic_parser.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n\n            type GenericWrapper<T> = {\n              value: T;\n              value2: T | boolean;\n              other: GenericWrapper<T>;\n            };\n\n            type UsesGenericWrapper = {\n              wrappedString: GenericWrapper<string>;\n              wrappedNumber: GenericWrapper<number>;\n            };\n\n            parse.buildParsers<{ UsesGenericWrapper: UsesGenericWrapper }>();\n      \"#)"
---
type UsesGenericWrapper = {
  "wrappedNumber": {
    "other": GenericWrapper;
    "value": number;
    "value2": boolean | number;
  };
  "wrappedString": {
    "other": GenericWrapper;
    "value": string;
    "value2": boolean | string;
  };
};
type UsesGenericWrapper = UsesGenericWrapper;
