packages/beff-core/tests/snapshots/print_parser__tests__ok_recursive_generic_with_union_parser.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n            type GenericWrapper<T> = {\n              value: T;\n              value2: T | boolean;\n              other: null | GenericWrapper<T>;\n            };\n\n            type UsesGenericWrapper = {\n              wrappedString: GenericWrapper<string>;\n              wrappedNumber: GenericWrapper<number>;\n            };\n\n            parse.buildParsers<{ UsesGenericWrapper: UsesGenericWrapper }>();\n      \"#)"
---
type GenericWrapper<string> = { "other": (null | GenericWrapper<string>), "value": string, "value2": (boolean | string) };

type GenericWrapper<number> = { "other": (null | GenericWrapper<number>), "value": number, "value2": (boolean | number) };

type UsesGenericWrapper = { "wrappedNumber": GenericWrapper<number>, "wrappedString": GenericWrapper<string> };


type BuiltParsers = {
  UsesGenericWrapper: UsesGenericWrapper,
}
