packages/beff-core/tests/snapshots/print_parser__tests__ok_repro12.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        const val = 1 + 1;\n        export type AllTs = typeof val;\n\n        parse.buildParsers<{ AllTs: AllTs }>();\n      \"#)"
---
--- entry.ts ---
const val = 1 + 1;
export type AllTs = typeof val;

parse.buildParsers<{ AllTs: AllTs }>();
--------------------------------
type AllTs = number;


type BuiltParsers = {
  AllTs: AllTs,
}
