packages/beff-core/tests/snapshots/print_parser__tests__ok_repro6.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        const x = (it: string) => it;\n        export const ABC = {a: `b`, c: `d${x(\"d\")}d`};\n        export type AllTs = (keyof typeof ABC);\n\n        parse.buildParsers<{ AllTs: AllTs }>();\n      \"#)"
---
--- entry.ts ---
const x = (it: string) => it;
export const ABC = {a: `b`, c: `d${x("d")}d`};
export type AllTs = (keyof typeof ABC);

parse.buildParsers<{ AllTs: AllTs }>();
--------------------------------
type AllTs = ("a" | "c");


type BuiltParsers = {
  AllTs: AllTs,
}
