packages/beff-core/tests/snapshots/print_parser__tests__ok_string_alias_decoder.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_cgen(r#\"\n        export type Alias = string;\n        parse.buildParsers<{ Dec: Alias }>();\n      \"#)"
---
const direct_hoist_0 = new RefRuntype("Alias");
const direct_hoist_1 = new TypeofRuntype("string");
const namedRuntypes = {
    "Alias": direct_hoist_1
};
const buildParsersInput = {
    "Dec": direct_hoist_0
};
