packages/beff-core/tests/snapshots/print_parser__tests__ok_string_decoder2.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_cgen(r#\"\n        parse.buildParsers<{ Dec: string }>();\n      \"#)"
---
const hoistedIndirect = [];
const namedRuntypes = {};
const buildParsersInput = {
    "Dec": new TypeofRuntype("string")
};
