packages/beff-core/tests/snapshots/print_parser__tests__ok_tpl_lit1.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        export type IX = `a${string}b${number}c`\n        parse.buildParsers<{ IX: IX }>();\n      \"#)"
---
type IX = `a${string}b${number}c`;

type IX = IX;
