packages/beff-core/tests/snapshots/print_parser__tests__ok_void.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        export type IX = void\n        parse.buildParsers<{ IX: IX }>();\n      \"#)"
---
--- entry.ts ---
export type IX = void
parse.buildParsers<{ IX: IX }>();
--------------------------------
type IX = void;


type BuiltParsers = {
  IX: IX,
}
